# Dictionary

./: Definition.py  Description.py  Dictionary.cabal  Main.py  Meaning.py  Misc.py  RedBlackTree.py  Section.py  Word.py
Haskell/src/: Main.hs
Python/: Main.py
src/: Main.hs
